--- a/assets/scss/sections/_app.scss
+++ b/assets/scss/sections/_app.scss
@@ -71,11 +71,17 @@
     }
 }
 
+@include xl {
+    #app-section {
+        .app-bg {
+            width: 90%;
+        }
+    }
+}
 @include lg {
     #app-section {
         margin-top: 300px;
         .app-bg {
-            width: 90%;
             &::before {
                 left: 37%;
             }
