--- a/assets/scss/sections/_header.scss
+++ b/assets/scss/sections/_header.scss
@@ -67,6 +67,18 @@ header {
     }
 }
 
+@include sm {
+    header {
+        padding: 20px;
+    }
+}
+
+@include xs {
+    header {
+        padding: 20px 15px;
+    }
+}
+
 @include xxs {
     header {
         padding: 15px 0;
