--- a/assets/scss/sections/_proccess.scss
+++ b/assets/scss/sections/_proccess.scss
@@ -86,8 +86,26 @@
         }
     }
 }
+
+@include md {
+    #process-section {
+        .section-heading {
+            margin-bottom: 40px;
+        }
+        .single-process {
+            margin-bottom: 30px;
+        }
+    }
+}
+
+@include sm {
+    #process-section {
+        padding: 40px 0;
+    }
+}
 @include xxs {
     #process-section {
+        padding: 30px 0;
         .section-heading {
             margin-bottom: 40px;
         }
