--- a/assets/scss/sections/_choose.scss
+++ b/assets/scss/sections/_choose.scss
@@ -16,6 +16,7 @@
         border-radius: 20px;
         text-align: center;
         padding: 40px 20px;
+        margin-bottom: 24px;
     }
 
     .single-city-img {
@@ -140,7 +141,7 @@
                 justify-content: center;
             }
         }
-        .col-xxs-12 {
+        .col-xxs-11 {
             width: 90%;
         }
     }
