--- a/assets/scss/main/_global.scss
+++ b/assets/scss/main/_global.scss
@@ -89,6 +89,11 @@ a:visited {
     color: #000;
     font-weight: 700;
 
+    @include xs {
+        font-size: 40px;
+        line-height: 55px;
+    }
+
     @include xxs {
         font-size: 35px;
         line-height: 50px;
