--- a/assets/scss/main/_mixins.scss
+++ b/assets/scss/main/_mixins.scss
@@ -34,6 +34,14 @@
         font-size: 130px;
     }
 
+    @include sm {
+        font-size: 100px;
+    }
+
+    @include sm {
+        font-size: 85px;
+    }
+
     @include xxs {
         font-size: 50px;
     }
