--- a/assets/scss/sections/_hero.scss
+++ b/assets/scss/sections/_hero.scss
@@ -3,6 +3,7 @@
 #hero-section {
     padding: 142px 0;
     position: relative;
+    overflow: hidden;
     .hero-content {
         z-index: 2;
         position: relative;
