--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ Table of Content
 html {
   overflow-x: hidden;
   scroll-behavior: smooth;
+  scroll-padding-top: 130px;
 }
 
 body {
@@ -60,11 +61,41 @@ h2 {
   font-size: 45px;
   line-height: 60px;
 }
+@media screen and (max-width: 1399px) {
+  h2 {
+    font-size: 40px;
+    line-height: 55px;
+  }
+}
+@media screen and (max-width: 991px) {
+  h2 {
+    font-size: 35px;
+    line-height: 50px;
+  }
+}
+@media screen and (max-width: 575px) {
+  h2 {
+    font-size: 30px;
+    line-height: 45px;
+  }
+}
+@media screen and (max-width: 479px) {
+  h2 {
+    font-size: 25px;
+    line-height: 35px;
+  }
+}
 
 h3 {
   font-size: 25px;
   line-height: 35px;
   font-weight: 500;
+}
+@media screen and (max-width: 479px) {
+  h3 {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 h4 {
@@ -183,14 +214,64 @@ a:visited {
 }
 @media screen and (max-width: 575px) {
   .section-heading h2 {
-    font-size: 40px;
-    line-height: 55px;
+    font-size: 30px;
+    line-height: 40px;
   }
 }
 @media screen and (max-width: 479px) {
   .section-heading h2 {
-    font-size: 35px;
-    line-height: 50px;
+    font-size: 25px;
+    line-height: 35px;
+  }
+}
+
+.preloader {
+  position: fixed;
+  z-index: 111;
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
+  display: grid;
+  place-content: center;
+}
+
+.back__to__top {
+  width: 50px;
+  height: 50px;
+  border: 0;
+  color: #fff;
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  background-image: linear-gradient(to right bottom, #f5286e, #fc6d43);
+  opacity: 0;
+  transition: all 0.4s ease;
+  cursor: pointer;
+}
+.back__to__top::before {
+  content: "";
+  transition: all 0.4s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-image: linear-gradient(to right bottom, #fc6d43, #f5286e);
+  opacity: 0;
+}
+.back__to__top:hover::before {
+  opacity: 1;
+}
+.back__to__top.active {
+  opacity: 1;
+}
+@media screen and (max-width: 575px) {
+  .back__to__top {
+    width: 45px;
+    height: 45px;
+    right: 20px;
+    bottom: 20px;
   }
 }
 
@@ -199,8 +280,8 @@ header {
   border-bottom: 2px solid #dcd8d8;
   padding: 20px 50px;
 }
-header .nav-item {
-  margin-right: 70px;
+header .navbar-nav {
+  column-gap: 70px;
 }
 header .nav-item:last-child {
   margin-right: 0px;
@@ -208,8 +289,6 @@ header .nav-item:last-child {
 header .nav-item a {
   color: #adadad;
   text-transform: capitalize;
-  padding-bottom: 20px;
-  border-bottom: 3px solid transparent;
   position: relative;
   font-size: 16px;
 }
@@ -223,7 +302,7 @@ header .nav-item a::after {
   content: "";
   position: absolute;
   left: 0;
-  bottom: -22px;
+  bottom: -32px;
   background: #f5286e;
   width: 100%;
   height: 3px;
@@ -243,7 +322,34 @@ header .sign-up-btn {
   line-height: 50px;
 }
 
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: #fff;
+  z-index: 111;
+  padding: 10px 50px;
+  transition: padding 0.4s ease;
+}
+
+@keyframes fadeDown {
+  from {
+    opacity: 0;
+    transform: translateY(-50%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
 @media screen and (max-width: 991px) {
+  header .navbar-nav {
+    row-gap: 10px;
+    align-items: flex-start !important;
+  }
+  header .sign-up-btn {
+    padding: 0 15px;
+  }
   header .btn-custom {
     padding: 0px 20px;
     height: 50px;
@@ -257,15 +363,21 @@ header .sign-up-btn {
   header {
     padding: 20px;
   }
+  .sticky {
+    padding: 20px;
+  }
 }
 @media screen and (max-width: 575px) {
   header {
     padding: 20px 15px;
   }
+  .sticky {
+    padding: 20px 15px;
+  }
 }
 @media screen and (max-width: 479px) {
   header {
-    padding: 15px 0;
+    padding: 10px 0;
   }
   header .btn-custom {
     padding: 0px 15px;
@@ -274,6 +386,12 @@ header .sign-up-btn {
   }
   header .btn-custom i {
     font-size: 20px;
+  }
+  header .logo-container img {
+    width: 47px;
+  }
+  .sticky {
+    padding: 10px 0;
   }
 }
 /*------------------HERO SECTION STYLES-----------------*/
@@ -328,6 +446,10 @@ header .sign-up-btn {
 }
 
 @media screen and (max-width: 1399px) {
+  #hero-section .hero-content h1 {
+    font-size: 45px;
+    line-height: 55px;
+  }
   #hero-section .car-container .car-img {
     top: -180px;
   }
@@ -340,6 +462,10 @@ header .sign-up-btn {
 @media screen and (max-width: 991px) {
   #hero-section {
     padding: 60px 0;
+  }
+  #hero-section .hero-content h1 {
+    font-size: 40px;
+    line-height: 50px;
   }
   #hero-section .row {
     justify-content: center;
@@ -359,8 +485,8 @@ header .sign-up-btn {
     padding: 45px 0;
   }
   #hero-section .hero-content h1 {
-    font-size: 50px;
-    line-height: 60px;
+    font-size: 35px;
+    line-height: 45px;
     margin-bottom: 20px;
   }
   #hero-section .hero-content p {
@@ -396,8 +522,8 @@ header .sign-up-btn {
     padding: 30px 0;
   }
   #hero-section .hero-content h1 {
-    font-size: 35px;
-    line-height: 45px;
+    font-size: 30px;
+    line-height: 40px;
   }
   #hero-section .car-container .car-img {
     top: -95px;
@@ -503,11 +629,6 @@ header .sign-up-btn {
   text-align: center;
   transition: all 0.4s ease;
 }
-#process-section .single-process:hover .single-process-icon i {
-  color: #fff;
-  -webkit-background-clip: unset;
-  -webkit-text-fill-color: #fff;
-}
 #process-section .single-process h3 {
   color: #000;
 }
@@ -544,6 +665,11 @@ header .sign-up-btn {
   -webkit-text-fill-color: transparent;
   position: relative;
   z-index: 2;
+}
+#process-section .second-icon i {
+  color: #fff;
+  -webkit-background-clip: unset;
+  -webkit-text-fill-color: #fff;
 }
 #process-section .second-icon::after {
   transform: rotate(180deg);
@@ -657,6 +783,9 @@ header .sign-up-btn {
   border-radius: 15px;
   margin-right: 35px;
 }
+#service-section .single-service:first-child img {
+  animation: spin 2s infinite linear;
+}
 #service-section .single-service-details h3 {
   font-size: 24px;
   color: #000;
@@ -689,6 +818,17 @@ header .sign-up-btn {
   #service-section .single-service img {
     margin-right: 0px;
     margin-bottom: 25px;
+  }
+  #service-section .single-service-details h3 {
+    font-size: 20px;
+  }
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 #choose-section {
@@ -1221,8 +1361,8 @@ header .sign-up-btn {
     width: 145px;
   }
   #app-section .app-content h2 {
-    font-size: 35px;
-    line-height: 50px;
+    font-size: 25px;
+    line-height: 35px;
   }
   #app-section .app-content span.app-subtitle {
     font-size: 16px;
@@ -1239,7 +1379,7 @@ header .sign-up-btn {
 footer {
   background: #000;
   padding-top: 270px;
-  padding-bottom: 70px;
+  padding-bottom: 100px;
   clip-path: polygon(0 125px, 100% 0, 100% 100%, 0% 100%);
   position: relative;
 }
@@ -1299,11 +1439,16 @@ footer .subscribe .btn-custom:hover::after {
 }
 footer .socials {
   margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
 }
-footer .socials i {
-  margin-right: 30px;
-  border: 2px solid;
+footer .socials a {
+  background-image: linear-gradient(to right, #f5286e, #fc6d43);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   border-radius: 50%;
+  border: 2px solid #fff;
   height: 40px;
   width: 40px;
   text-align: center;
@@ -1312,6 +1457,10 @@ footer .socials i {
 footer .footer-bottom {
   font-size: 16px;
   line-height: 24px;
+  text-align: center;
+}
+footer .footer-bottom .row {
+  row-gap: 20px;
 }
 footer .footer-bottom .copyright {
   color: #fff;
