--- a/assets/scss/sections/_hero.scss
+++ b/assets/scss/sections/_hero.scss
@@ -59,6 +59,13 @@
 
 @include xl {
     #hero-section {
+        .hero-content {
+            h1 {
+                font-size: 45px;
+                line-height: 55px;
+            }
+        }
+
         .car-container {
             .car-img {
                 top: -180px;
@@ -79,6 +86,13 @@
 
 @include md {
     #hero-section {
+        .hero-content {
+            h1 {
+                font-size: 40px;
+                line-height: 50px;
+            }
+        }
+
         padding: 60px 0;
         .row {
             justify-content: center;
@@ -103,8 +117,8 @@
 
         .hero-content {
             h1 {
-                font-size: 50px;
-                line-height: 60px;
+                font-size: 35px;
+                line-height: 45px;
                 margin-bottom: 20px;
             }
             p {
@@ -153,8 +167,8 @@
 
         .hero-content {
             h1 {
-                font-size: 35px;
-                line-height: 45px;
+                font-size: 30px;
+                line-height: 40px;
             }
         }
 
