--- a/assets/scss/main/_global.scss
+++ b/assets/scss/main/_global.scss
@@ -90,12 +90,66 @@ a:visited {
     font-weight: 700;
 
     @include xs {
-        font-size: 40px;
-        line-height: 55px;
+        font-size: 30px;
+        line-height: 40px;
     }
 
     @include xxs {
-        font-size: 35px;
-        line-height: 50px;
+        font-size: 25px;
+        line-height: 35px;
+    }
+}
+
+.preloader {
+    position: fixed;
+    z-index: 111;
+    width: 100%;
+    height: 100vh;
+    background-color: $white;
+    display: grid;
+    place-content: center;
+}
+
+.back__to__top {
+    width: 50px;
+    height: 50px;
+    border: 0;
+    color: #fff;
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    background-image: linear-gradient(to right bottom, $main-color, $color-2);
+    opacity: 0;
+    transition: all 0.4s ease;
+    cursor: pointer;
+
+    &::before {
+        content: "";
+        transition: all 0.4s ease;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        background-image: linear-gradient(to right bottom, $color-2, $main-color);
+        opacity: 0;
+    }
+
+    &:hover {
+        &::before {
+            opacity: 1;
+        }
+    }
+
+    &.active {
+        opacity: 1;
+    }
+
+    @include xs {
+        width: 45px;
+        height: 45px;
+        right: 20px;
+        bottom: 20px;
     }
 }
