--- a/assets/scss/main/_typography.scss
+++ b/assets/scss/main/_typography.scss
@@ -19,12 +19,37 @@ h1 {
 h2 {
     font-size: 45px;
     line-height: 60px;
+
+    @include xl {
+        font-size: 40px;
+        line-height: 55px;
+    }
+
+    @include md {
+        font-size: 35px;
+        line-height: 50px;
+    }
+
+    @include xs {
+        font-size: 30px;
+        line-height: 45px;
+    }
+
+    @include xxs {
+        font-size: 25px;
+        line-height: 35px;
+    }
 }
 
 h3 {
     font-size: 25px;
     line-height: 35px;
     font-weight: 500;
+
+    @include xxs {
+        font-size: 20px;
+        line-height: 30px;
+    }
 }
 
 h4 {
