--- a/assets/scss/sections/_header.scss
+++ b/assets/scss/sections/_header.scss
@@ -4,8 +4,12 @@ header {
 
     padding: 20px 50px;
 
+    .navbar-nav {
+        column-gap: 70px;
+    }
+
     .nav-item {
-        margin-right: 70px;
+        // margin-right: 70px;
 
         &:last-child {
             margin-right: 0px;
@@ -13,8 +17,6 @@ header {
         a {
             color: $color-3;
             text-transform: capitalize;
-            padding-bottom: 20px;
-            border-bottom: 3px solid transparent;
             position: relative;
             font-size: 16px;
 
@@ -29,7 +31,7 @@ header {
                 content: "";
                 position: absolute;
                 left: 0;
-                bottom: -22px;
+                bottom: -32px;
                 background: $main-color;
                 width: 100%;
                 height: 3px;
@@ -53,8 +55,39 @@ header {
     }
 }
 
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background: #fff;
+    z-index: 111;
+    padding: 10px 50px;
+    transition: padding 0.4s ease;
+    // animation: fadeDown 0.4s ease forwards;
+}
+
+@keyframes fadeDown {
+    from {
+        opacity: 0;
+        transform: translateY(-50%);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+}
+
 @include md {
     header {
+        .navbar-nav {
+            row-gap: 10px;
+            align-items: flex-start !important;
+        }
+
+        .sign-up-btn {
+            padding: 0 15px;
+        }
+
         .btn-custom {
             padding: 0px 20px;
             height: 50px;
@@ -71,17 +104,25 @@ header {
     header {
         padding: 20px;
     }
+
+    .sticky {
+        padding: 20px;
+    }
 }
 
 @include xs {
     header {
         padding: 20px 15px;
     }
+
+    .sticky {
+        padding: 20px 15px;
+    }
 }
 
 @include xxs {
     header {
-        padding: 15px 0;
+        padding: 10px 0;
 
         .btn-custom {
             padding: 0px 15px;
@@ -92,5 +133,14 @@ header {
                 font-size: 20px;
             }
         }
+        .logo-container {
+            img {
+                width: 47px;
+            }
+        }
+    }
+
+    .sticky {
+        padding: 10px 0;
     }
 }
