--- a/assets/scss/sections/_service.scss
+++ b/assets/scss/sections/_service.scss
@@ -29,6 +29,12 @@
             border-radius: 15px;
             margin-right: 35px;
         }
+
+        &:first-child {
+            img {
+                animation: spin 2s infinite linear;
+            }
+        }
     }
 
     .single-service-details {
@@ -72,5 +78,19 @@
                 margin-bottom: 25px;
             }
         }
+
+        .single-service-details {
+            h3 {
+                font-size: 20px;
+            }
+        }
+    }
+}
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
     }
 }
