--- a/assets/scss/sections/_guide.scss
+++ b/assets/scss/sections/_guide.scss
@@ -2,6 +2,7 @@
     padding: 60px 0;
     position: relative;
     padding-top: 100px;
+    overflow: hidden;
 
     &::after {
         content: "Book a cab";
